# falsifyai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/pr-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  COMPLIANCE.md  DEMO.md  EVIDENCE.md  RELEASE.md  THE-EVIDENCE-GAP.md
docs/case-studies/: 01-invisible-character-substitution.md  02-resolver-arbitration-boundary-shift.md  03-evaluator-false-positive.md  04-overconfident-negation.md  05-confidence-floor-inversion.md  06-perturbation-validity-omission.md  07-the-regression-that-only-appeared-under-pressure.md  08-how-fragile-exactly-the-minimal-falsifier.md  README.md
docs/case-studies/data/: README.md  case-study-02.db  case-study-04.db  case-study-07.db  case-study-replays.db  probe-03.db  probe-05.db  probe-06-fixed.db  probe-06.db
docs/case-studies/probe-03/: README.md  RESULTS.md  candidate-1-refund-omission.yaml  candidate-2-deadline-inversion.yaml  candidate-3-extraction-schema.yaml  candidate-4-clause-exception.yaml  candidate-5-threshold-anchor.yaml
docs/case-studies/probe-05/: README.md  candidate-a-grounded-fact.yaml  candidate-b-stable-refusal.yaml  candidate-c-targeted-unicode.yaml  candidate-d-thin-evidence.yaml
docs/case-studies/probe-06/: README.md  candidate-extraction-8b.yaml
docs/case-studies/probe-07/: PLAN.md  README.md  baseline-promo-70b.yaml  candidate-promo-8b.yaml
docs/case-studies/specs/: 02-resolver-arbitration-v1.yaml  02-resolver-arbitration-v2.yaml  README.md
examples/: README.md  adversarially_vulnerable.yaml  ambiguous.yaml  consistently_wrong.yaml  fragile.yaml  information_null.yaml  information_present.yaml  invalid_eval.yaml  model_migration.yaml  paraphrase.yaml  schema_match.yaml  stable.yaml  unicode_regression.yaml
falsifyai/: __init__.py
falsifyai/bundle/: __init__.py  writer.py
falsifyai/cli/: __init__.py  diff.py  doctor.py  errors.py  export.py  history.py  inspect.py  main.py  matrix.py  minimize.py  render.py  replay.py  run.py  timeline.py  verify.py
falsifyai/execution/: __init__.py  adapter.py  cache.py  engine.py  errors.py  litellm_adapter.py  models.py
falsifyai/falsifiability/: __init__.py  score.py
falsifyai/integrity/: __init__.py  checks.py
falsifyai/invariants/: __init__.py  base.py  contains.py  registry.py  schema_match.py  semantic.py
falsifyai/oracles/: base.py  consistency.py  contradiction.py  entailment_support.py  grounding.py  hallucination.py  information_null.py  meta.py  nli.py
falsifyai/perturbation/: __init__.py  base.py  casing_variant.py  paraphrase.py  registry.py  typo_noise.py  unicode_chars.py  validity.py
falsifyai/replay/: __init__.py  in_memory_store.py  models.py  protocol.py  registry.py  serialize.py  sqlite_store.py
falsifyai/spec/: __init__.py  errors.py  loader.py  materializer.py  models.py
falsifyai/verdict/: __init__.py  consistency.py  models.py  resolver.py  stratify.py
scripts/: release_gate.py  scaffold_dev_notes.py
tests/fixtures/: build_artifact.py  mock_adapter.py  mock_embedder.py
tests/fixtures/diff/: v0.2.0_baseline.txt
tests/fixtures/specs/: full.yaml  malformed.yaml  minimal.yaml  missing_cases.yaml  missing_seed.yaml  missing_threshold.yaml  paraphrase.yaml  run_smoke.yaml  unknown_field.yaml  unknown_perturbation_type.yaml
tests/integration/: test_bundle_renders_invocation.py  test_diff_end_to_end.py  test_examples.py  test_export_end_to_end.py  test_matrix_end_to_end.py  test_minimize_end_to_end.py  test_replay_end_to_end.py  test_run_end_to_end.py  test_timeline_end_to_end.py  test_verify_end_to_end.py
tests/meta/: test_cli_import_hygiene.py  test_evidence_doc_freshness.py  test_plugin_discovery.py  test_readme_command_surface.py  test_release_gate_coverage_sync.py  test_resolver_branch_count.py  test_verdict_consumer_coverage.py
tests/unit/: test_build_nli_backend.py  test_bundle_writer.py  test_casing_variant.py  test_cli_diff.py  test_cli_diff_sharpening.py  test_cli_doctor.py  test_cli_export.py  test_cli_history.py  test_cli_inspect.py  test_cli_invocation_model.py  test_cli_main.py  test_cli_matrix.py  test_cli_minimize.py  test_cli_render.py  test_cli_replay.py  test_cli_run_captures_invocation.py  test_cli_store_lifecycle.py  test_cli_timeline.py  test_cli_verify.py  test_contains_invariant.py  test_execution_cache.py  test_execution_engine.py  test_execution_models.py  test_falsifiability_score.py  test_integrity_checks.py  test_invariant_base.py  test_invariant_registry.py  test_invocation_capture_does_not_import_resolver.py  test_litellm_adapter.py  test_materializer.py  test_nli_backend.py  test_oracle_consistency.py  test_oracle_contradiction.py  test_oracle_entailment_support.py  test_oracle_grounding.py  test_oracle_hallucination.py  test_oracle_information_null.py  test_oracle_meta.py  test_paraphrase.py  test_paraphrase_validity.py  (+20 more)
