[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falsifyai"
version = "0.0.0"
description = "Falsification-first reliability testing for AI systems."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    { name = "Eric Zhou", email = "ericckzhou@gmail.com" },
]
keywords = [
    "ai",
    "llm",
    "evaluation",
    "testing",
    "robustness",
    "falsification",
    "reliability",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.50",
    "numpy>=2.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/TBD/falsifyai"
Repository = "https://github.com/TBD/falsifyai"
Issues = "https://github.com/TBD/falsifyai/issues"

[project.scripts]
falsifyai = "falsifyai.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["falsifyai"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "meta: tests that test the testing framework",
]

[tool.coverage.run]
source = ["falsifyai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
