[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falsifyai"
version = "0.4.0"
description = "Falsification-first reliability testing for AI systems: perturb inputs, preserve replayable evidence, diff reliability across model changes."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    { name = "Eric Zhou", email = "ericckzhou@gmail.com" },
]
keywords = [
    "ai",
    "llm",
    "evaluation",
    "testing",
    "robustness",
    "falsification",
    "reliability",
    "regression-testing",
    "differential-testing",
    "perturbation-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.50",
    "numpy>=2.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# The `semantic_equivalence` invariant uses sentence-transformers (which
# pulls in PyTorch, ~1GB). Kept optional so `pip install falsifyai` stays
# small. Install with `pip install "falsifyai[semantic]"` when needed.
semantic = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "sentence-transformers>=3.0",
]

[project.urls]
Homepage = "https://github.com/ericckzhou/falsifyai"
Repository = "https://github.com/ericckzhou/falsifyai"
Documentation = "https://github.com/ericckzhou/falsifyai#readme"
Issues = "https://github.com/ericckzhou/falsifyai/issues"
Changelog = "https://github.com/ericckzhou/falsifyai/blob/main/CHANGELOG.md"

[project.scripts]
falsifyai = "falsifyai.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["falsifyai"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "meta: tests that test the testing framework",
]

[tool.coverage.run]
source = ["falsifyai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
